18. Merged in XFree86 code up to 4.4.0 including changes to files that had     a changed license. There was only one change which happened to be from     me (Egbert Eich).

--- a/man/XDGA.man
+++ b/man/XDGA.man
@@ -1,4 +1,4 @@
-.\" $XFree86: xc/lib/Xxf86dga/XDGA.man,v 1.1 2003/11/22 01:33:31 dawes Exp $
+.\" $XFree86$
 .\" 
 .TH XDGA 3 __vendorversion__ "XFree86"
 .SH NAME
